--- a/jors2016.bib
+++ b/jors2016.bib
@@ -8,16 +8,6 @@
   pages = 	 {1041-1054}
 }
 
-@Article{richardson-et-al:2013,
-  author = 	 {Thomas Richardson and Liz Burd and Shamus Smith},
-  title = 	 {{Guidelines for supporting real-time multi-touch applications}},
-  journal = 	 {{Journal of Software: Practice and Experience}},
-  year = 	 {2013},
-  volume = 	 {44},
-  number = 	 {8},
-  pages = 	 {931-949}
-}
-
 @inproceedings{reetz-et-al:2006,
   title =	 {Superflick: a natural and efficient technique for long-distance object placement on digital tables},
   author =	 {Adrian Reetz and Carl Gutwin and Tadeusz Stach and Miguel Nacenta and Sriram Subramanian},
@@ -35,3 +25,222 @@
   year =	 {2010},
   organization =	 {ACM}
 }
+
+@misc{igniterealtime:2016,
+  title  = {{Openfire}},
+  author = {Igniterealtime},
+  howpublished   = {\url{https://www.igniterealtime.org/projects/openfire/}},
+  note = {[Accessed: 2016-11-01]},
+  year = {2016},
+}
+
+@misc{hazelcast:2016,
+  title  = {Hazelcast},
+  author = {{Hazelcast Inc.}},
+  howpublished   = {\url{https://hazelcast.org/}},
+  note = {[Accessed: 2016-11-01]},
+  year = {2016},
+}
+
+@misc{zerotier:2016,
+  title  = {{ZeroTier}},
+  author = {{ZeroTier Inc.}},
+  howpublished   = {\url{https://www.zerotier.com}},
+  note = {[Accessed: 2016-11-01]},
+  year = {2016},
+}
+
+@misc{kyaw:2010,
+  title  = {{SynergyView}},
+  author = {Phyo Kyaw and James McNaughton},
+  howpublished   = {\url{https://doi.org/10.5281/zenodo.54566}},
+  note = {[Accessed: 2016-11-01]},
+  year = {2010},
+  doi = {10.5281/zenodo.54566},
+  publisher={Zenodo},
+}
+
+@misc{hatch:2011,
+  title  = {{SynergyNet 3.1}},
+  author = {James McNaughton and Phyo Kyaw},
+  howpublished   = {\url{https://doi.org/10.5281/zenodo.54562}},
+  note = {[Accessed: 2016-11-01]},
+  year = {2011},
+  doi = {10.5281/zenodo.54562},
+  publisher={Zenodo},
+}
+
+@inproceedings{kharrufa:2013,
+  author = {Ahmed Kharrufa and Madeline Balaam and Phil Heslop and David Leat and Paul Dolan and Patrick Olivier},
+  title = {{Tables in the Wild: Lessons Learned from a Large-scale Multi-tabletop Deployment}},
+  booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+  series = {CHI '13},
+  year = {2013},
+  isbn = {978-1-4503-1899-0},
+  location = {Paris, France},
+  pages = {1021--1030},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/2470654.2466130},
+  doi = {10.1145/2470654.2466130},
+  acmid = {2466130},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {classroom orchestration, collaborative learning, tabletops},
+}
+
+@inproceedings{kreitmayer:2013,
+  author = {Stefan Kreitmayer and Yvonne Rogers and Robin Laney and Stephen Peake},
+  title = {UniPad: Orchestrating Collaborative Activities Through Shared Tablets and an Integrated Wall Display},
+  booktitle = {Proceedings of the 2013 ACM International Joint Conference on Pervasive and Ubiquitous Computing},
+  series = {UbiComp '13},
+  year = {2013},
+  isbn = {978-1-4503-1770-2},
+  location = {Zurich, Switzerland},
+  pages = {801--810},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/2493432.2493506},
+  doi = {10.1145/2493432.2493506},
+  acmid = {2493506},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {classroom, collaborative learning, orchestration, public display, tablets, ubiquitous computing},
+} 
+
+@inproceedings{harris:2009,
+  author = {Amanda Harris and Jochen Rick and Victoria Bonnett and Nicola Yuill and Rowanne Fleck and Paul Marshall and Yvonne Rogers},
+  title = {Around the Table: Are Multiple-touch Surfaces Better Than Single-touch for Children's Collaborative Interactions?},
+  booktitle = {Proceedings of the 9th International Conference on Computer Supported Collaborative Learning - Volume 1},
+  series = {CSCL'09},
+  year = {2009},
+  isbn = {978-1-4092-8598-4},
+  location = {Rhodes, Greece},
+  pages = {335--344},
+  numpages = {10},
+  url = {http://dl.acm.org/citation.cfm?id=1600053.1600104},
+  acmid = {1600104},
+  publisher = {International Society of the Learning Sciences},
+} 
+
+@article{mercier:2013,
+  title = {Collaborative learning with multi-touch technology: Developing adaptive expertise},
+  journal = {Learning and Instruction},
+  volume = {25},
+  pages = {13 - 23},
+  year = {2013},
+  issn = {0959-4752},
+  doi = {http://dx.doi.org/10.1016/j.learninstruc.2012.10.004},
+  url = {http://www.sciencedirect.com/science/article/pii/S0959475212000850},
+  author = {Emma M. Mercier and Steven E. Higgins}
+}
+
+@article{Joyce-Gibbons:2016,
+author = {Andrew Joyce-Gibbons},
+title = {Observe, interact and act: teachers’ initiation of mini-plenaries to scaffold small-group collaboration},
+journal = {Technology, Pedagogy and Education},
+volume = {0},
+number = {0},
+pages = {1-18},
+year = {0},
+doi = {10.1080/1475939X.2016.1173089},
+}
+
+@article{mercier:2016,
+  author = {Emma Mercier},
+  title = {Teacher orchestration and student learning during mathematics activities in a smart classroom},
+  journal = {International Journal of Smart Technology and Learning},
+  volume = {1},
+  number = {1},
+  pages = {33-52},
+  year = {2016},
+  doi = {10.1504/IJSMARTTL.2016.078160},
+}
+
+@article{joycegibbons:2016,
+  author = {Andrew Joyce-Gibbons},
+  title = {Observe, interact and act: teachers’ initiation of mini-plenaries to scaffold small-group collaboration},
+  journal = {Technology, Pedagogy and Education},
+  volume = {0},
+  number = {0},
+  pages = {1-18},
+  year = {0},
+}
+
+@article {mercier:2015,
+  author = {Emma Mercier and Georgia Vourloumi and Steven Higgins},
+  title = {Student interactions and the development of ideas in multi-touch and paper-based collaborative mathematical problem solving},
+  journal = {British Journal of Educational Technology},
+  issn = {1467-8535},
+  url = {http://dx.doi.org/10.1111/bjet.12351},
+  doi = {10.1111/bjet.12351},
+  year = {2015},
+}
+
+@inproceedings{mercier:2014, 
+  author={Emma Mercier}, 
+  booktitle={Collaboration Technologies and Systems (CTS), 2014 International Conference on}, 
+  title={Device ecologies to support collaborative learning in classrooms}, 
+  year={2014}, 
+  pages={217-218}, 
+  keywords={computer aided instruction;haptic interfaces;collaborative interactions;collaborative learning;device ecologies;multitouch classroom;multitouch technology;secondary learning environment;Abstracts;Collaboration;Collaborative work;Educational institutions;Environmental factors;Joints}, 
+  doi={10.1109/CTS.2014.6867567}, 
+  month={May},
+}
+
+@inproceedings{mohammed:2012, 
+  author={Mohammed Basheri and Liz Burd}, 
+  booktitle={2012 Frontiers in Education Conference Proceedings}, 
+  title={Exploring the significance of multi-touch tables in enhancing collaborative software design using UML}, 
+  year={2012}, 
+  pages={1-5}, 
+  doi={10.1109/FIE.2012.6462217}, 
+  ISSN={0190-5848}, 
+  month={Oct},
+}
+
+@inproceedings{kim:2007, 
+  author={Jangwoon Kim and Jaewan Park and {HyungKwan} Kim and Chilwoo Lee}, 
+  booktitle={2007 IEEE Pacific Rim Conference on Communications, Computers and Signal Processing}, 
+  title={{HCI(Human Computer Interaction) Using Multi-touch Tabletop Display}}, 
+  year={2007}, 
+  pages={391-394}, 
+  keywords={computer displays;gesture recognition;human computer interaction;touch sensitive screens;HCI;frustrated total internal reflection principle;hand gesture command classification;human computer interaction;multitouch tabletop display;recognition process;Cameras;Communication system control;Computer displays;Filters;Fingers;Humans;Information systems;Infrared detectors;Light emitting diodes;Optical reflection}, 
+  doi={10.1109/PACRIM.2007.4313256}, 
+  ISSN={1555-5798}, 
+  month={Aug},
+}
+
+@inproceedings{wu:2003,
+  author = {Mike Wu and Ravin Balakrishnan},
+  title = {Multi-finger and Whole Hand Gestural Interaction Techniques for Multi-user Tabletop Displays},
+  booktitle = {Proceedings of the 16th Annual ACM Symposium on User Interface Software and Technology},
+  series = {UIST '03},
+  year = {2003},
+  isbn = {1-58113-636-6},
+  location = {Vancouver, Canada},
+  pages = {193--202},
+  numpages = {10},
+  url = {http://doi.acm.org/10.1145/964696.964718},
+  doi = {10.1145/964696.964718},
+  acmid = {964718},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {collaborative and competitive applications, gestures, multi degree-of-freedom input, tabletop interaction},
+} 
+
+@inproceedings{rick:2009,
+  author = {Jochen Rick and Amanda Harris and Paul Marshall and Rowanne Fleck and Nicola Yuill and Yvonne Rogers},
+  title = {Children Designing Together on a Multi-touch Tabletop: An Analysis of Spatial Orientation and User Interactions},
+  booktitle = {Proceedings of the 8th International Conference on Interaction Design and Children},
+  series = {IDC '09},
+  year = {2009},
+  isbn = {978-1-60558-395-2},
+  location = {Como, Italy},
+  pages = {106--114},
+  numpages = {9},
+  url = {http://doi.acm.org/10.1145/1551788.1551807},
+  doi = {10.1145/1551788.1551807},
+  acmid = {1551807},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {co-located collaboration, collaborative design, log-file analysis, multi-touch, shareable interfaces, touch analysis},
+} 
